--- a/Client/View/Content/Modals/EmailVerificationModal.axaml
+++ b/Client/View/Content/Modals/EmailVerificationModal.axaml
@@ -1,16 +1,14 @@
-<view:ModalBase
-    xmlns="https://github.com/avaloniaui"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:view="clr-namespace:Client.View.Content"
-    xmlns:controls="clr-namespace:Client.View.Controls"
-    xmlns:modals="clr-namespace:Client.View.Content.Modals"
-    x:Class="Client.View.Content.Modals.EmailVerificationModal"
-    Width="250">
+<controls:ModalBase xmlns="https://github.com/avaloniaui"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:controls="clr-namespace:Client.View.Controls"
+                    xmlns:modals="clr-namespace:Client.View.Content.Modals"
+                    x:Class="Client.View.Content.Modals.EmailVerificationModal"
+                    Width="250">
 
     <UserControl.Styles>
         <StyleInclude Source="/View/Controls/TitleTemplate.axaml" />
-        <StyleInclude Source="/View/Controls/ModalTemplate.axaml" />
         <StyleInclude Source="/View/Controls/VerificationCharacter.axaml" />
+        <StyleInclude Source="/View/Controls/ModalTemplate.axaml" />
     </UserControl.Styles>
 
     <controls:ModalTemplate>
@@ -38,14 +36,14 @@
                     <controls:VerificationCharacter />
                 </StackPanel>
 
-                <Border Grid.Row="1" Margin="0 10.0 0 0">
-                    <Button Padding="10.0"
+                <Border Grid.Row="1" Margin="0 30.0 0 0">
+                    <Button Name="SubmitButton"
                             Classes="Unstyled"
                             Click="Button_Submit"
-                            IsVisible="{Binding 
-                        RelativeSource={RelativeSource FindAncestor, 
-                        AncestorType={x:Type modals:EmailVerificationModal}},
-                        Path=CanSubmit}">
+                            IsEnabled="{Binding
+                            RelativeSource={RelativeSource FindAncestor, 
+                            AncestorType={x:Type modals:EmailVerificationModal}},
+                            Path=CanSubmit}">
                         <controls:Icon
                             Text="Submit"
                             Source="{StaticResource Icon.Arrow-Right-Fill}"
@@ -55,4 +53,4 @@
             </Grid>
         </controls:TitleTemplate>
     </controls:ModalTemplate>
-</view:ModalBase>
+</controls:ModalBase>
