--- a/Client/View/Content/Modals/EmptyModal.axaml
+++ b/Client/View/Content/Modals/EmptyModal.axaml
@@ -1,9 +1,9 @@
-<view:ModalBase xmlns="https://github.com/avaloniaui"
-                xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-                xmlns:view="clr-namespace:Client.View.Content"
-                mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-                x:Class="Client.View.Content.Modals.EmptyModal">
+<controls:ModalBase xmlns="https://github.com/avaloniaui"
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                    xmlns:controls="clr-namespace:Client.View.Controls"
+                    mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+                    x:Class="Client.View.Content.Modals.EmptyModal">
 
-</view:ModalBase>
+</controls:ModalBase>
